fixed the overlaping sections

--- a/home.css
+++ b/home.css
@@ -17,6 +17,7 @@ body{
     padding:10px 0px;
     overflow-x: hidden;
 
+
 background-color: #2d3436;
 background-image: linear-gradient(315deg, #2d3436 8%, #d3d3d3 84%);
 
@@ -195,9 +196,9 @@ td ul li .course{
 
 .services{
     color:black;
-    padding:30px 50px;
+    padding:30px;
     background-color:white;
-    height:100vh;
+    height:110vh;
     width:100vw;
 }
 
@@ -212,19 +213,20 @@ td ul li .course{
 .services-heading p{
    line-height: 25px;
    text-align: center;
-   padding:15px 100px;
+   padding:10px 100px;
    font-size:20px;
    color:#393E46;
   
 }
 
 .grid-services{
-    padding:30px;
+    padding:50px;
     display: grid;
     grid-template-columns: repeat(3, 320px);
     grid-auto-rows: minmax(80px , 210px);
-    gap:30px;
+    gap:20px;
     justify-content: center;
+    
 }
 
 .grid-services h1{
@@ -282,8 +284,8 @@ td ul li .course{
 }
 
 .contact{
-    margin:50px 0 0 0;
-    height:100vh;
+    padding:50px 0 0 0;
+    height:110vh;
     width:100vw;
     padding:30px 50px ;
     z-index: 1;
@@ -401,4 +403,6 @@ td ul li .course{
     border:1px solid black;
     cursor:pointer;
 }
+
+
 
